@@ -1,5 +1,10 @@
 2010-02-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
+	* FiltersToolbox/scinrrd_intersect_plane.m:
+
+	- When sampling with interpn(), it is necessary to provide the
+	grid matrices in the same order as they are generated by ndgrid().
+
 	* Add FileFormatToolbox/scinrrd_seg3d2matlab.m:
 
 	- SCINRRD_SEG3D2MATLAB Correct dimensions of data loaded from SCI
